--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,7 @@ html{
   font-size: 10px;
   overflow-x:hidden;
   /* overflow-y:hidden; */
+  width: 100%;
 }
 
 .no-scroll{
